[package]
name = "axiom-wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "=0.8"
ark-std = { version = "=0.3.0", features = ["print-trace"] }
serde = { version = "=1.0", default-features = false, features = ["derive"] }
serde_json = "=1.0"
log = "=0.4"
env_logger = "=0.10"
clap = { version = "=4.0", features = ["derive"] }
clap-num = "=1.0.2"

# wasm
hex = "0.4.3"
wasm-bindgen = "0.2.87"
getrandom = { version = "0.2", features = ["js"] }

# halo2
halo2_proofs = { git = "https://github.com/privacy-scaling-explorations/halo2.git", tag = "v2023_02_02" }

# Axiom's helper API with basic functions
# halo2-base = { git = "https://github.com/axiom-crypto/halo2-lib", branch = "community-edition" }
# snark-verifier-sdk = { git = "https://github.com/axiom-crypto/snark-verifier.git", branch = "community-edition" }

halo2-base = { git = "https://github.com/axiom-crypto/halo2-lib.git", tag = "v0.4.1-git" }
snark-verifier-sdk = { git = "https://github.com/axiom-crypto/snark-verifier.git", tag = "v0.1.7-git" }

# halo2-base = { version = "0.4.1", features = ["halo2-axiom"] }
# halo2-base = { git = "https://github.com/axiom-crypto/halo2-lib.git", package = "halo2-base", branch = "develop", features = [
#     "halo2-axiom",
# ] }
# snark-verifier-sdk = { version = "0.1.7", default-features = false, features = ["loader_halo2", "halo2-axiom"] }

[dev-dependencies]
test-log = "=0.2.11"
ethers-core = "=2.0.6"

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false